# evenlis.github.io

./: barnehagefakta.py  create_kindergarden_table.py  kostra.py  kostra_koder_i_regnskap.csv  pyproject.toml  regnskap_fon_barnehage.py
docs/: CNAME  _config.yml  about.markdown  barnehager_oversikt.md  index.html  index.markdown
docs/_data/: barnehager_sammenligning.csv
docs/_sass/: minima.scss
docs/_sass/minima/: _base.scss
input/: regnskap_fon_barnehage.csv  utgiftskonti.csv
queries/kostra/: table_12055_leke_og_oppholdsareal_alle_kommuner.json  table_13502_barn_per_ansatt.json  table_13502_kostnad_per_barnehagebarn_alle_kommuner.json  table_13502_kostnad_prosent_totale_driftsutgifter_alle_kommuner.json
